--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
 				</div>
 				<div class="hero-desc">
 					<div class="title">
-						<h2>Freedom at your
+						<h2>
+							Freedom at your
 							<span class="mountain-span">fingertips.</span>
 						</h2>
 						<div class="title-swipe t-swipe1"></div>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur eos, et facilis modi rem sint
-						 voluptatem. Deserunt dolores dolorum ducimus!
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+						asperiores ad laboriosam iure rem. Voluptates pariatur quo iusto non
+						deleniti.
 					</p>
 					<a class="explore mountain-exp">Explore</a>
 					<div class="reveal-text"></div>
@@ -54,8 +57,10 @@
 						</h2>
 						<div class="title-swipe t-swipe2"></div>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur eos, et facilis modi rem sint
-						 voluptatem. Deserunt dolores dolorum ducimus!
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+						asperiores ad laboriosam iure rem. Voluptates pariatur quo iusto non
+						deleniti.
 					</p>
 					<a class="explore hike-exp">Explore</a>
 					<div class="reveal-text"></div>
@@ -68,15 +73,18 @@
 				</div>
 				<div class="hero-desc">
 					<div class="title">
-						<h2>Freedom at your
+						<h2>
+							Freedom at your
 							<span class="fashion-span">fingertips.</span>
 						</h2>
 						<div class="title-swipe t-swipe3"></div>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur eos, et facilis modi rem sint
-						 voluptatem. Deserunt dolores dolorum ducimus!
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+						asperiores ad laboriosam iure rem. Voluptates pariatur quo iusto non
+						deleniti.
 					</p>
-					<a class="explore fashion-exp">Explore</a>
+					<a href="./fashion/index.html" class="explore fashion-exp">Explore</a>
 					<div class="reveal-text"></div>
 				</div>
 			</section>
@@ -84,13 +92,14 @@
 		<nav class="nav-bar">
 			<ul class="nav-links">
 				<h3>Twitter</h3>
-				<h3>YouTube</h3>
+				<h3>Youtube</h3>
 				<h3>Instagram</h3>
 			</ul>
 			<div class="contact">
 				<h2>Stay in touch.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci consectetur culpa, expedita inventore
-					 modi nihil obcaecati quod veniam voluptatibus?
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolorem
+					praesentium ea amet error quidem natus. Magnam explicabo sed tenetur?
 				</p>
 			</div>
 		</nav>
@@ -100,6 +109,7 @@
 		<div class="swipe swipe1"></div>
 		<div class="swipe swipe2"></div>
 		<div class="swipe swipe3"></div>
+		<script src="https://unpkg.com/@barba/core"></script>
 		<script
 				 src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
 				 integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg=="
