--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat&display=swap" rel="stylesheet">
 		<title>Travel Website</title>
 	</head>
-	<body>
+	<body data-barba="wrapper">
 		<header class="nav-header">
 			<h1>
 				<a href="index.html" id="logo">days.</a>
@@ -22,7 +22,7 @@
 				<div class="line2"></div>
 			</div>
 		</header>
-		<main>
+		<main data-barba="container" data-barba-namespace="home">
 			<section class="mountain slide">
 				<div class="hero-image">
 					<img src="/img/forest.png" alt="forest image">
