--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<title>Travel Website</title>
 	</head>
 	<body data-barba="wrapper">
+		<div class="lt-description">
+			<p id="lt-desc">Created By <span class="lt"><a href="https://github.com/lashatatu" target="_blank">Lasha Tatulashvili</a>	</span></p>
+		</div>
 		<header class="nav-header">
 			<h1>
 				<a href="index.html" id="logo">days.</a>
@@ -106,6 +109,7 @@
 		<div class="cursor">
 			<span class="cursor-text"></span>
 		</div>
+
 		<div class="swipe swipe1"></div>
 		<div class="swipe swipe2"></div>
 		<div class="swipe swipe3"></div>
